[#4] feat: virtual thread pinning 확인 gradle task 등록